--- a/apps/cockroachdb.yaml
+++ b/apps/cockroachdb.yaml
@@ -122,7 +122,7 @@ spec:
           httpGet:
             path: "/health"
             port: http
-          initibalDelaySeconds: 30
+          initialDelaySeconds: 30
           periodSeconds: 5
         readinessProbe:
           httpGet:
@@ -165,3 +165,6 @@ spec:
     - podSelector:
         matchLabels:
           app: cockroachdb-client
+    - podSelector:
+        matchLabels:
+          app: cockroachdb
