--- a/apps/emojivoto.yaml
+++ b/apps/emojivoto.yaml
@@ -1,5 +1,6 @@
 # source: https://raw.githubusercontent.com/runconduit/conduit-examples/master/emojivoto/emojivoto.yml
 # use ingress instead of load balancer service
+# use ExternalDNS
 
 apiVersion: v1
 kind: Namespace
@@ -110,12 +111,13 @@ metadata:
   namespace: emojivoto
 spec:
   rules:
-  - http:
+  - host: emojivoto.cloudylab.io
+    http:
       paths:
       - path: /*
         backend:
           serviceName: web-svc
-          servicePort: http
+          servicePort: 80
 
 ---
 apiVersion: apps/v1
